[project]
name = "five-nights-at-fwr-members"
version = "1"
description = "FNaF but with FWR Members"

[tool.cxfreeze]
executables = [
    {script = "Five_Nights_at_FWR_members_v1.0.py", base = "gui"}
]

[tool.cxfreeze.build_exe]
includes = ["pygame"]
include_files = [
    "battery_0.png",
    "battery_1.png",
    "battery_2.png",
    "battery_3.png",
    "battery_4.png",
    "bg.jpg",
    "bg_both.jpg",
    "bg_brainless.png",
    "bg_cris.jpg",
    "bg_end.jpg",
    "bg_koko.jpg",
    "bg_left.jpg",
    "bg_nuke.png",
    "bg_right.jpg",
    "Brainless.png",
    "Cris.png",
    "Koko.png",
    "Nuke.png",
    "player.png",
    "LcdSolid.ttf"
]
